perf: refactor CommandRunner to use Java 25 virtual threads for stream reading